@@ -5,6 +5,7 @@ ART 3.1
 * Allow localization of report output column names
 * Added csv zip report format
 * Allow outputting of fixed width reports as txt or zip file
+* Allow use of dynamic recipient details in email subject
 * Updated sqlite driver to 3.20.1
 * Updated jxls to 2.4.2
 
